# nanobind

./: CMakeLists.txt  pyproject.toml
.github/workflows/: architectures_test.yml
