[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake>=3.18", "ninja"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.cibuildwheel]
archs = [ "x86_64" ]
build = "cp311-*"
skip = "*-musllinux_*"
build-frontend = "build"
before-all = "yum -y install eigen3-devel"
before-build = """echo 'from skbuild import setup; setup(cmake_install_target="all")' > setup.py"""
repair-wheel-command = ""
before-test = "mv _skbuild /skbuild"
test-requires = "pytest pytest-github-actions-annotate-failures"
test-command = [
    "find /skbuild",
    "cd /skbuild/*/cmake-build/",
    "python -m pytest -v"]
